--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@open-wc/testing": "^2.5.33",
     "@web/dev-server": "^0.1.18",
-    "@web/test-runner": "^0.12.20"
+    "@web/test-runner": "^0.12.20",
+    "sinon": "^12.0.1"
   }
 }
