--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "lit-element": "^2.5.1",
-    "lit-html": "^1.4.1"
+    "lit-html": "^1.4.1",
+    "live-server": "^1.2.1"
   },
   "devDependencies": {
     "@open-wc/testing": "^2.5.33",
